# data-app

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: requirements.txt  unit_tests.yaml
dags/: create_tables.py  models.py  postgres_cli.py  pyproject.toml  stocks_dag.py
dags/migrations/: env.py
dags/modules/: create_tables.py  extract.py  insert.py  load.py  models.py  postgres_cli.py  reports.py  transform.py
initsql/: init.sql
models/: alembic.ini
tests/: test_extract.py  test_reports.py
