[tool.poetry]
name = "data-app"
version = "0.0.1"
description = ""
authors = ["sergio-fogel <fogel.sergio@gmail.com>"]
readme = "README.md"
packages = [{include = "data-app"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "1.3.5"
requests = "2.28.1"
sqlalchemy = "1.4.27"
psycopg2 = "2.9.3"
mplfinance = "^0.12.9b5"
numpy = "1.21.6"


[tool.poetry.group.dev.dependencies]
pdbpp = "0.10.2"
pytest = "7.2.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
